--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         if(isSmartPhone()){
             nav.id = "mobileNav"
             empty.id = "mobileEmpty"
-            alert("アプデ中")
+            //alert("アプデ中")
        }else{
         }
     </script>
