--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
         </header>
         
         <ul id="nav">
-            <a href="https://twitter.com/jajmsms"><li><p>HOME</p></li></a>
+            <a href="index.html"><li><p>HOME</p></li></a>
             <a href="https://twitter.com/jajmsms"><li><p>Twitter</p></li></a>
             <a href="https://www.youtube.com/channel/UCUfd7UkkVFS5FHaV7OScSZw"><li>YouTube</li></a>
-            <a href="https://twitter.com/jajmsms"><li><p>GitHub</p></li></a>
+            <a href="https://github.com/fjdkfhaefa/Gaming9/tree/main"><li><p>GitHub</p></li></a>
         </ul>
         <div class="wrapper">
 
@@ -230,7 +230,6 @@
         if(isSmartPhone()){
             nav.id = "mobileNav"
             empty.id = "mobileEmpty"
-            //alert("アプデ中")
        }else{
         }
     </script>
