--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
                     background-color: #333;
                     margin-top: 10px;
                     text-align: center;
-                    height: 20%;
+                    width:100%;
+                    height: auto;
+                    position: absolute;/*←絶対位置*/
+                    bottom: 0; /*下に固定*/
                 }
                 #c{
                     display: flex;
