--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
     <body>
         <header>
             <style>
+                @media (max-height: 500px) {
+                    footer{
+                        display: none;
+                    }
+                }
                 body{
                     background-image: url(https://pbs.twimg.com/media/FyJMTtxaUAEGoCj?format=jpg&name=large);
+                    background-size:cover;
                     margin: 0;
                     color: white;
+                    position: relative;
                 }
                 .l_header{
                     width: 100%;
@@ -26,7 +33,7 @@
                 .wrapper{
                     display: flex;
                     width: 98%;
-                    height: 720px;
+                    height: 60vh;
                     background-color: rgba(0,0,0,0.6);
                     border-radius: 10px;
                     margin: 0 auto 0 auto;
@@ -38,6 +45,7 @@
                     overflow:auto;
                     overflow-x: hidden;
                 }
+
                 section{
                     line-height: 10px;
                 }
@@ -102,10 +110,10 @@
                     align-items: center;
                     justify-content: center;
                 }
-                .gallery_box{
+                #gallery_box{
                     overflow: hidden;
                 }
-                .gallery_box figure{
+                #gallery_box figure{
                     background-color: rgba(0,0,0,0.6);
                     margin: 0 0 15px 15px;
                     width: 200px;
@@ -113,24 +121,38 @@
                     border-radius: 10px;
                     border: solid 10px rgba(0,255,255,0.0);
                 }
-                .gallery_box figure:hover{
+                #mobileGallery_box figure{
+                    background-color: rgba(0,0,0,0.6);
+                    margin: 0 0 15px 15px;
+                    width: 300px;
+                    float: left;
+                    border-radius: 15px;
+                    border: solid 15px rgba(0,255,255,0.0);
+                    font-size: 150%;
+                }
+                #gallery_box figure:hover{
                     background-color: rgba(0,200,255,1);
                     border-radius: 10px;
                     border: solid 10px rgba(0,200,255,1);
                 }
-                .gallery_box figure a img{
+                #gallery_box figure a img{
                     width: 200px;
                     height: 110px;
                     border-radius: 10px;
+                }
+                #mobileGallery_box figure a img{
+                    width: 300px;
+                    height: 155px;
+                    border-radius: 15px;
                 }
                 footer{
                     background-color: #333;
                     margin-top: 10px;
                     text-align: center;
                     width:100%;
-                    height: auto;
-                    position: absolute;/*←絶対位置*/
-                    bottom: 0; /*下に固定*/
+                    height: 60px;
+                    position: absolute;
+                    bottom: 0;
                 }
                 #c{
                     display: flex;
@@ -158,7 +180,7 @@
                     <h2>GAMING9 Webサイト</h2>
                     <p>使いやすくなった謎の光るページ</p>
                 </section>
-                <div class="gallery_box">
+                <div id="gallery_box">
                     <figure>
                         <a href="gamingMatrixv2.html">
                             <img src="https://user-images.githubusercontent.com/86725396/244706796-cd4ae1a1-06fb-4993-8ede-9d4ac554342f.png">
@@ -212,12 +234,14 @@
             <div class="l_sidebar">
                 <aside>疲れて未実装ぉ</aside>
             </div>
-        </div>
+
+        </div><!--wrapper-->
         <footer>
             <div id="c">
                 <p>Copyright © 2023 ⑨な人PJT. All Rights Reserved.</p>
             </div>
         </footer>
+
     </body>
     <script>
         function isSmartPhone() {
@@ -229,11 +253,15 @@
         }
         var nav = document.getElementById("nav")
         var empty = document.getElementById("empty")
-        var header = document.getElementById("header")
+        var gallery_box = document.getElementById("gallery_box")
         if(isSmartPhone()){
             nav.id = "mobileNav"
             empty.id = "mobileEmpty"
+
        }else{
+            //nav.id = "mobileNav"
+            //empty.id = "mobileEmpty"
+            //gallery_box.id = "mobileGallery_box"
         }
     </script>
 </html>
