--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         if(isSmartPhone()){
             nav.id = "mobileNav"
             empty.id = "mobileEmpty"
-
+            gallery_box.id = "mobileGallery_box"
        }else{
             //nav.id = "mobileNav"
             //empty.id = "mobileEmpty"
