--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@
                         </a>
                         <figcaption>BufferGeoLines</figcaption>
                     </figure>
+                    <figure>
+                        <a href="BingChatSpeech&txtAnimv1.1cGaming.html">
+                            <img src="https://user-images.githubusercontent.com/86725396/244706807-36ea7c83-572b-4fe9-a306-478a01f449f6.png">
+                        </a>
+                        <figcaption>BufferGeoLines</figcaption>
+                    </figure>
                 </div>
             </div>
             <div class="l_sidebar">
