--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
         });
         renderer.domElement.addEventListener('touch', function (event) {
             touchClick()
+            alert("もう寝たいの！")
         });
         // ウィンドウのリサイズイベントハンドラ
         function onWindowResize() {
