--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -53,18 +53,20 @@
 
     #textInput {
         padding: 10px;
-        font-size: 16px;
+        font-size: 150%;
         border: none;
         border: 4px solid white;
-        border-radius: 6px;
+        border-radius: 10px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         transition: border-color 0.3s ease,color 0.3s ease,background-color 0.3s ease;
         float: right; /* 右寄せ */
         width: 200px; /* 必要な幅を指定 */
-        background-color: transparent; /* 背景色を透明にする */
+        background-color: rgba(0, 0, 0, 0.1); /* 背景色を透明にする */
         color: white; /* テキストの初期色を白にする */
         margin-right: 100px; /* 右からの距離を調整 */
         margin-top:150px;
+        width: 300px;
+        height: 60px;
     }
 
     #textInput:hover {
@@ -77,20 +79,22 @@
         outline: none;
         border-color: skyblue; /* 入力中のボーダーの色 */
         color: skyblue; /* 入力中のテキストの色 */
-        background-color:rgba(135, 207, 235, 0.233)
+        background-color:rgba(0, 0, 0, 0.4);
     }
 
     button {
         padding: 10px 20px;
         font-size: 16px;
         border: white solid 4px;
-        border-radius: 6px;
-        background-color: transparent;
+        border-radius: 10px;
+        background-color: rgba(0, 0, 0, 0.1);
         color: white;
         transition: border-color 0.3s ease,color 0.3s ease,background-color 0.3s ease;
         float: right;
         margin-right: 100px;
-        margin-top: 50px;
+        margin-top: 40px;
+        font-size: 170%;
+        padding: 10px;
     }
 
     button:hover {
@@ -140,17 +144,19 @@
     }
     #speed{
         right: 50px;
-        width:200px;
+        width:150px;
         top:100px;
         position:relative;
         display: block;
+        transform: scale(1.5);
     }
     #speed2{
         right: 50px;
-        width:200px;
-        top:110px;
+        width:150px;
+        top:120px;
         position:relative;
         display: block;
+        transform: scale(1.5);
     }
 </style>
 
