--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -108,10 +108,12 @@
 
     #txtErea{
         display: block;
-        width: 100%;
+        width: 98%;
         height: auto;
         background-color: rgba(0,0,0,0.7);
         border-radius: 10px;
+        padding: 10px;
+        font-size: 150%;
     }
     body{
         background-image: url(https://pbs.twimg.com/media/FyJMTtxaUAEGoCj?format=jpg&name=large);
