--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -1,38 +1,63 @@
 <body id="body">
     <aside>
-        <a href="index.html"><div id="home"></div></a>
-        <div id="full0" onclick="full0click()">
-            <div class="bow"id="x0" style="width: 22.68px; height: 9.072px; position: relative; left: -27.216px; top: -27.216px;">
-                <div class="bow"id="y0" style="width: 9.072px; height: 22.68px;position: relative; left: 0px; top: 3.1752px;">
+        <div id="ninja">
+            <a href="index.html"><div id="home"></div></a>
+            <div id="full0" onclick="full0click()">
+                <div class="bow"id="x0" style="width: 22.68px; height: 9.072px; position: relative; left: -27.216px; top: -27.216px;">
+                    <div class="bow"id="y0" style="width: 9.072px; height: 22.68px;position: relative; left: 0px; top: 3.1752px;">
+                    </div>
+                </div>
+                <div class="bow"id="x1" style="width: 22.68px; height: 9.072px;position: relative; top: -36.288px; left: 20.412px;">
+                    <div class="bow"id="y1" style="width: 9.072px; height: 22.68px;position: relative; top: 3.1752px; left: 13.608px;">
+                    </div>
+                </div>
+                <div class="bow"id="x2" style="width: 22.68px; height: 9.072px;position: relative; top: 18.144px; left: 20.412px;">
+                    <div class="bow"id="y2" style="width: 9.072px; height: 22.68px;position: relative; top: -15.876px; left: 13.608px;">
+                    </div>
+                </div>
+                <div class="bow"id="x3" style="width: 22.68px; height: 9.072px;position: relative; top: 9.072px; left: -27.216px;">
+                    <div class="bow"id="y3" style="width: 9.072px; height: 22.68px;position: relative; top: -15.876px; left: 0px;">
+                    </div>
                 </div>
             </div>
-            <div class="bow"id="x1" style="width: 22.68px; height: 9.072px;position: relative; top: -36.288px; left: 20.412px;">
-                <div class="bow"id="y1" style="width: 9.072px; height: 22.68px;position: relative; top: 3.1752px; left: 13.608px;">
-                </div>
+            <input type="range" id="speed" name="speed" min="0" max="30">
+            <input type="range" id="speed2" name="speed2" min="0" max="100" value="10">
+            <input type="text" id="textInput" placeholder="Enter text">
+            <button onclick="pauseAnimation()">Pause</button>
+            <div class="check">
+                <input type="checkbox" id="toggleSwitch">自動削除&nbsp;
             </div>
-            <div class="bow"id="x2" style="width: 22.68px; height: 9.072px;position: relative; top: 18.144px; left: 20.412px;">
-                <div class="bow"id="y2" style="width: 9.072px; height: 22.68px;position: relative; top: -15.876px; left: 13.608px;">
-                </div>
+            <div class="check">
+                <input type="checkbox" id="realTime" checked="checked">随時入力&nbsp;
             </div>
-            <div class="bow"id="x3" style="width: 22.68px; height: 9.072px;position: relative; top: 9.072px; left: -27.216px;">
-                <div class="bow"id="y3" style="width: 9.072px; height: 22.68px;position: relative; top: -15.876px; left: 0px;">
-                </div>
-            </div>
+            
         </div>
-        <input type="range" id="speed" name="speed" min="0" max="30">
-        <input type="range" id="speed2" name="speed2" min="0" max="100" value="10">
-        <input type="text" id="textInput" placeholder="Enter text">
-        <button onclick="pauseAnimation()">Pause</button>
-        <div class="check">
-            <input type="checkbox" id="toggleSwitch">自動削除&nbsp;
-        </div>
-        <div class="check">
-            <input type="checkbox" id="realTime" checked="checked">随時入力&nbsp;
-        </div>
+        <button class="menu-button" onclick="ninja()">忍者</button>
     </aside>
     <div id="txtErea"></div>
 </body>
 <style>
+    .menu-button {
+    padding: 10px 20px;
+    font-size: 200%;
+    border: none;
+    background-color: rgba(255,255,255,0.7);
+    color: #333;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s linear;
+    }
+
+    .menu-button:hover,
+    .menu-button:focus {
+    background-color: transparent;
+    background-image: linear-gradient(to right, rgba(255,255,255,0.7), transparent);
+    }
+
+    .menu-button:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px #999;
+    }
     .check {
         transform: scale(3);
         margin-right: 160px;
@@ -166,7 +191,17 @@
 </style>
 
 <script>
+    var hide = false
+    function ninja(){
+        if(hide == false){
+            document.getElementById("ninja").style.display = "none"
+            hide = true
+        }else{
+            document.getElementById("ninja").style.display = "block"
+            hide = false
+        }
 
+    }
     function full0click(){
         if (!document.fullscreenElement) {
         document.documentElement.requestFullscreen();
