--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -25,7 +25,9 @@
             <input type="range" id="speed" name="speed" min="0" max="30">
             <input type="range" id="speed2" name="speed2" min="0" max="100" value="10">
             <input type="text" id="textInput" placeholder="Enter text">
-            <button id="pause">Pause</button>
+            <div class="check">
+                <input type="checkbox" id="pause">一時停止&nbsp;
+            </div>
             <div class="check">
                 <input type="checkbox" id="toggleSwitch"checked="checked">自動削除&nbsp;
             </div>
@@ -408,6 +410,10 @@ isRealTime.addEventListener("change", function() {
         realTime = false
     }
 });
+var _pause = document.getElementById("pause")
+_pause.addEventListener("change", function() {
+    pauseAnimation()
+});
 function ini(){
     speechSynthesis.cancel()
     uttr = new SpeechSynthesisUtterance(selectedTxt)
@@ -445,12 +451,6 @@ spmeter2.addEventListener("input", (event) => {
     convert()
     animation()
     
-})
-document.getElementById("pause").addEventListener("click",function(){
-    pauseAnimation()
-})
-document.getElementById("pause").addEventListener("touch",function(){
-    pauseAnimation()
 })
 function pauseAnimation() {
     if(stop == false){
