--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -459,6 +459,9 @@ function pauseAnimation() {
     }else{
         stop = false
         speechSynthesis.resume();
+        speechSynthesis.resume();
+        speechSynthesis.resume();
+        speechSynthesis.resume();
         animation()
     }
 }
