--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -26,7 +26,7 @@
             <input type="range" id="speed2" name="speed2" min="0" max="100" value="10">
             <input type="text" id="textInput" placeholder="Enter text">
             <div class="check">
-                <input type="checkbox" id="pause">一時停止&nbsp;
+                <input type="checkbox" id="pause">一時中断&nbsp;
             </div>
             <div class="check">
                 <input type="checkbox" id="toggleSwitch"checked="checked">自動削除&nbsp;
@@ -455,7 +455,7 @@ spmeter2.addEventListener("input", (event) => {
 function pauseAnimation() {
     if(stop == false){
         stop = true
-        speechSynthesis.pause();
+        window.speechSynthesis.pause();
     }else{
         stop = false
         speechSynthesis.resume();
