--- a/test.html
+++ b/test.html
@@ -82,6 +82,7 @@
             padding: 10px;
             background-color: rgba(0, 0, 0, 0.7);
             margin-right: 0px;
+            overflow-y: hidden;
         }
 
         /* メニューボタン */
