--- a/test.html
+++ b/test.html
@@ -105,14 +105,19 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: flex-end;
-            padding: 10px;
+            padding: 0px;
             flex-grow: 1;
+            width: 100%;
+            height: 200px;
+            background-color: black;
         }
     
         /* テキストエリア */
         #txtErea {
             color: white;
             font-size: 150%;
+            height: max-content;
+            background-color: gray;
         }
     
         /* フッター */
