--- a/test.html
+++ b/test.html
@@ -424,7 +424,7 @@ function animation(){
     if(count < txt1.length){
 
         body.insertAdjacentHTML('beforeend',txt1[count])
-        window.scrollTo(0,200000)
+        //window.scrollTo(0,200000)
         count++
     }else{
         count=0
